Cleanup Idea or Sonar warnings
Throw or log exception
Remove unused imports
Remove unused code
Unneeded parenthesis
Chain assertions in tests
...